# skyline-apiserver

./: .dockerignore  .gitignore  .gitmodules  .gitreview  .isort.cfg  .zuul.yaml  MANIFEST.in  Makefile  README-zh_CN.md  README-zh_CN.rst  README.md  README.rst  alembic.ini  bindep.txt  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  swagger.json  test-requirements.txt  tox.ini  upper-constraints.txt
README/: README-ko_KR.rst  README-zh_CN.rst
container/: Dockerfile  start_service.sh
devstack/: README.rst  plugin.sh  settings
devstack/inc/: python
doc/: README.rst
doc/source/: conf.py  index.rst
docs/api/: swagger.json
docs/images/: OpenStack_Project_Skyline-Icon-RGB.eps  OpenStack_Project_Skyline_horizontal_1color.eps  OpenStack_Project_Skyline_vertical.eps  OpenStack_Project_Skyline_vertical_1color.eps
etc/: .gitignore  gunicorn.py  skyline-apiserver.yaml.sample  skyline.yaml.sample
kolla/: README-zh_CN.md  README.md  kolla-0ba97fd.diff  kolla-ansible-3d98604.diff
libs/skyline-apiserver/: Makefile  pyproject.toml
libs/skyline-apiserver/skyline_apiserver/: __init__.py  __main__.py  main.py
libs/skyline-apiserver/skyline_apiserver/api/: deps.py
libs/skyline-apiserver/skyline_apiserver/api/v1/: __init__.py  contrib.py  extension.py  login.py  policy.py  prometheus.py  setting.py
libs/skyline-apiserver/skyline_apiserver/api/v1/openstack/: base.py
libs/skyline-apiserver/skyline_apiserver/client/: utils.py
libs/skyline-apiserver/skyline_apiserver/client/openstack/: cinder.py  glance.py  keystone.py  neutron.py  nova.py  system.py
libs/skyline-apiserver/skyline_apiserver/cmd/: generate_nginx.py  generate_sample_config.py  generate_swagger.py  policy_manager.py
libs/skyline-apiserver/skyline_apiserver/config/: default.py  developer.py  openstack.py  setting.py
libs/skyline-apiserver/skyline_apiserver/core/: security.py
libs/skyline-apiserver/skyline_apiserver/db/: api.py  base.py
libs/skyline-apiserver/skyline_apiserver/db/alembic/: env.py
libs/skyline-apiserver/skyline_apiserver/network/: neutron.py
libs/skyline-apiserver/skyline_apiserver/policies/: __init__.py  base.py
libs/skyline-apiserver/skyline_apiserver/policy/: base.py
libs/skyline-apiserver/skyline_apiserver/policy/manager/: base.py  cinder.py  glance.py  heat.py  octavia.py  panko.py  placement.py
libs/skyline-apiserver/skyline_apiserver/schemas/: __init__.py  extension.py  login.py  policy_manager.py  prometheus.py  setting.py
libs/skyline-apiserver/skyline_apiserver/tests/: conftest.py  fake.py  models.py
libs/skyline-apiserver/skyline_apiserver/tests/api/v1/: test_contrib.py  test_extension.py  test_login.py
libs/skyline-apiserver/skyline_apiserver/tests/core/config/: backup_test_base.py  backup_test_default.py  backup_test_openstack.py
libs/skyline-apiserver/skyline_apiserver/tests/unit/cmd/: test_policy_manager.py
libs/skyline-apiserver/skyline_apiserver/tests/unit/config/: test_base.py
libs/skyline-apiserver/skyline_apiserver/tests/unit/log/: test_log.py
libs/skyline-apiserver/skyline_apiserver/types/: constants.py
libs/skyline-apiserver/skyline_apiserver/utils/: roles.py
libs/skyline-apiserver/tests/: conftest.py
libs/skyline-apiserver/tests/api/v1/: test_login.py  test_setting.py
libs/skyline-apiserver/tests/core/config/: backup_test_default.py
libs/skyline-apiserver/tests/utils/: utils.py
libs/skyline-apiserver/tools/: post_install.sh
libs/skyline-config/: Makefile  mypy.ini  pyproject.toml
libs/skyline-config/skyline_config/: __init__.py  config.py
libs/skyline-config/src/skyline_config/: config.py
libs/skyline-config/tests/: fake.py  test_skyline_config.py
libs/skyline-config/tests/unit/: test_config.py  test_skyline_config.py
libs/skyline-log/: Makefile  pyproject.toml
libs/skyline-log/skyline_log/: log.py
libs/skyline-log/src/skyline_log/: __init__.py  log.py
libs/skyline-log/tests/: conftest.py  fake.py
libs/skyline-log/tests/unit/: test_log.py  test_skyline_log.py
libs/skyline-nginx/: Makefile  pyproject.toml
libs/skyline-nginx/skyline_nginx/cmd/: generate_nginx.py
libs/skyline-nginx/skyline_nginx/config/: __init__.py  default.py  openstack.py
libs/skyline-nginx/skyline_nginx/templates/: nginx.conf.j2
libs/skyline-nginx/tests/: test_skyline_nginx.py
libs/skyline-policy-manager/: .flake8  Makefile  mypy.ini  pyproject.toml
libs/skyline-policy-manager/skyline_policy_manager/: __main__.py  constants.py
libs/skyline-policy-manager/skyline_policy_manager/cmd/: manage.py
libs/skyline-policy-manager/skyline_policy_manager/policies/: base.py  cinder.py  glance.py  heat.py  ironic.py  keystone.py  manila.py  neutron.py  nova.py  octavia.py  panko.py  placement.py  trove.py
libs/skyline-policy-manager/src/skyline_policy_manager/cmd/: manage.py
libs/skyline-policy-manager/src/skyline_policy_manager/policies/: __init__.py  base.py  cinder.py  glance.py  heat.py  ironic.py  keystone.py  neutron.py  nova.py  octavia.py  panko.py  placement.py
libs/skyline-policy-manager/tests/: fake.py  test_skyline_policy_manager.py
libs/skyline-policy-manager/tests/unit/: test_skyline_policy_manager.py
libs/skyline-policy-manager/tests/unit/cmd/: test_manage.py
libs/skyline-policy-manager/tools/: post_install.sh
playbooks/devstack/: pre.yaml  run-tox.yaml
playbooks/python-tarball/: post.yaml  pre.yaml  run.yaml
releasenotes/notes/: add-api-doc-5aaffa4e93ca469a.yaml  add-barbican-configs-and-policies-3951a6784064045e.yaml  add-configurable-policy-files-7f4f2630bd497c90.yaml  add-default-project-id-825e195531344394.yaml  add-log-file-config-884e7d078feb43a7.yaml  add-magnum-configs-and-policies-b92cbaecac5a9379.yaml  add-masakari-and-designate-configs-policies-a20c8a5704122b1e.yaml  add-sso-login-via-openid.yaml  add-time-expired-into-cookie-ea5d947625480f65.yaml  (+4 more)
releasenotes/source/: conf.py  (+1 more)
skyline_apiserver/: __main__.py  context.py  main.py  version.py
spec/: bp-2024-h1-todo-list.md  bp-multi-region-domain-switch.md
tests/: conftest.py
tools/: mypywrap.sh  post_install.sh
(+139 files in other folders)
