[build-system]
requires = ["pbr>=6.1.1"]
build-backend = "pbr.build"

[project]
name = "skyline-apiserver"
description = "OpenStack Skyline APIServer"
authors = [
    {name = "OpenStack", email = "openstack-discuss@lists.openstack.org"},
]
readme = {file = "README.rst", content-type = "text/x-rst"}
license = {text = "Apache-2.0"}
dynamic = ["version", "dependencies"]
requires-python = ">=3.10"
classifiers = [
  "Environment :: OpenStack",
  "Intended Audience :: Information Technology",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: Implementation :: CPython",
]

[project.urls]
Homepage = "https://docs.openstack.org/skyline-apiserver/latest/"
Repository = "https://opendev.org/openstack/skyline-apiserver"

[tool.setuptools.packages.find]
include = ["skyline_apiserver*"]

[project.entry-points."console_scripts"]
skyline-swagger-generator = "skyline_apiserver.cmd.generate_swagger:main"
skyline-sample-config-generator = "skyline_apiserver.cmd.generate_sample_config:main"
skyline-nginx-generator = "skyline_apiserver.cmd.generate_nginx:main"
skyline-policy-manager = "skyline_apiserver.cmd.policy_manager:main"

[tool.mypy]
show_column_numbers = true
show_error_context = true
ignore_missing_imports = true
follow_imports = "skip"
incremental = true
check_untyped_defs = true
warn_unused_ignores = true
show_error_codes = true
pretty = true
html_report = "mypy-report"
no_implicit_optional = true
