[metadata]
name = skyline-apiserver
summary = OpenStack Skyline APIServer
description_file =
    README.rst
author = OpenStack
author_email = openstack-discuss@lists.openstack.org
home_page = https://docs.openstack.org/skyline-apiserver/latest/
python_requires = >=3.8
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
project_urls:
    Source=https://opendev.org/openstack/skyline-apiserver
    Tracker=https://bugs.launchpad.net/skyline-apiserver

[files]
packages =
    skyline_apiserver

[entry_points]
console_scripts =
    skyline-swagger-generator = skyline_apiserver.cmd.generate_swagger:main
    skyline-sample-config-generator = skyline_apiserver.cmd.generate_sample_config:main
    skyline-nginx-generator = skyline_apiserver.cmd.generate_nginx:main
    skyline-policy-manager = skyline_apiserver.cmd.policy_manager:main

[mypy]
show_column_numbers = true
show_error_context = true
ignore_missing_imports = true
follow_imports = skip
incremental = true
check_untyped_defs = true
warn_unused_ignores = true
show_error_codes = true
pretty = true
html_report = mypy-report
no_implicit_optional = true
