[tool.poetry]
name = "skyline-apiserver"
version = "0.1.0"
description = ""
license = "Apache-2.0"
authors = ["OpenStack <openstack-discuss@lists.openstack.org>"]
include = ["skyline_apiserver/db/alembic/alembic.ini"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = {extras = ["all"], version = "0.58.1"}
pydantic = "1.8.2"
PyYAML = "5.4.1"
immutables = "0.16"
uvicorn = {extras = ["standard"], version = "0.12.3"}
gunicorn = "20.1.0"
python-jose = "3.3.0"
alembic = "1.7.5"
httpx = "0.16.1"
sqlalchemy = "1.3.24"
databases = "0.4.3"
aiomysql = "0.0.21"
pymysql = "0.9.3"
aiosqlite = "0.17.0"
dnspython = "2.1.0"
loguru = "0.5.3"
click = "7.1.2"
python-keystoneclient = "3.21.0"
python-cinderclient = "5.0.2"
python-glanceclient = "2.17.1"
python-heatclient = "1.18.1"
python-neutronclient = "6.14.1"
python-novaclient = "15.1.1"
python-octaviaclient = "1.10.1"
osc-placement = "1.7.0"
keystoneauth1 = "3.17.4"
"oslo.policy" = "3.8.2"

[tool.poetry.dev-dependencies]
isort = "5.9.3"
black = "21.9b0"
add-trailing-comma = "2.1.0"
flake8 = "3.9.2"
mypy = "0.910"
pytest = "6.2.5"
pytest-xdist = "2.4.0"
pytest-asyncio = "0.15.1"
pytest-cov = "2.12.1"
pytest-html = "3.1.1"
mimesis = "4.1.3"
asgi-lifespan = "1.0.1"
types-PyYAML = "5.4.10"
"oslo.log" = "4.8.0"
neutron-lib = "2.15.0"

[tool.poetry.scripts]
swagger-generator = 'skyline_apiserver.cmd.generate_swagger:main'
config-sample-generator = 'skyline_apiserver.cmd.generate_sample_config:main'
skyline-policy-manager = "skyline_apiserver.cmd.policy_manager:main"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-v -s -p no:cacheprovider -n auto --cov=skyline_apiserver --cov-append --cov-report=term-missing --cov-report=html --html=test_results.html --self-contained-html"
testpaths = [
    "skyline_apiserver/tests",
]
markers = [
    "ddt(*args: TestData): Mark the test as a data-driven test."
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
