[tool.poetry]
name = "skyline-policy-manager"
version = "0.1.0"
description = ""
license = "Apache-2.0"
authors = ["OpenStack <openstack-discuss@lists.openstack.org>"]

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "*"
"oslo.policy" = "*"
Werkzeug = "*"
click = "*"
skyline-log = "*"

[tool.poetry.dev-dependencies]
isort = "*"
black = "^21.5b1"
add-trailing-comma = "*"
flake8 = "*"
mypy = "*"
pytest = "*"
pytest-xdist = {extras = ["psutil"], version = "*"}
skyline-log = {path = "../skyline-log", develop = true}
"oslo.log" = "*"
neutron-lib = "*"

[tool.poetry.scripts]
skyline-policy-manager = "skyline_policy_manager.cmd.manage:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
