[tool.poetry]
name = "skyline-policy-manager"
version = "0.1.0"
description = ""
license = "Apache-2.0"
authors = ["OpenStack <openstack-discuss@lists.openstack.org>"]

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "1.8.2"
"oslo.policy" = "3.8.2"
Werkzeug = "2.0.1"
click = "7.1.2"
skyline-log = "*"

[tool.poetry.dev-dependencies]
isort = "5.9.3"
black = "21.9b0"
add-trailing-comma = "2.1.0"
flake8 = "3.9.2"
mypy = "0.910"
pytest = "6.2.5"
pytest-xdist = "2.4.0"
pytest-cov = "2.12.1"
pytest-html = "3.1.1"
mimesis = "4.1.3"
skyline-log = {path = "../skyline-log", develop = true}

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-v -s -p no:cacheprovider -n auto --cov=skyline_policy_manager --cov-append --cov-report=term-missing --cov-report=html"
testpaths = [
    "tests",
]
markers = [
    "ddt(*args: TestData): Mark the test as a data-driven test."
]

[tool.poetry.scripts]
skyline-policy-manager = "skyline_policy_manager.cmd.manage:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
